# psynthea

./: .gitignore  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/concepts/: calibration.md  ground-truth.md  modules.md  observation.md  overview.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: authoring.md  benchmark.md  calibrate.md  cohorts.md  evaluation.md
docs/reference/: cli.md  output-formats.md  synthea-compat.md
src/psynthea/: __init__.py  _timeutil.py  calibration.py  cli.py  cohort.py  demographics.py  evaluation.py  keystone.py  mortality.py  observation.py  vitals.py
src/psynthea/compat/: __init__.py  synthea_export.py  synthea_json.py
src/psynthea/data/modules/: otitis_media.json
src/psynthea/dsl/: __init__.py  builder.py  logic.py
src/psynthea/engine/: __init__.py  executor.py  generator.py  person.py  record.py
src/psynthea/export/: __init__.py  csv_exporter.py  ground_truth_exporter.py  history.py  omop_exporter.py
src/psynthea/ir/: __init__.py  logic.py  module.py  states.py  transitions.py
src/psynthea/terminology/: __init__.py  codes.py
tests/: test_ancillary_states.py  test_calibration.py  test_cli_profile.py  test_cohort.py  test_dsl.py  test_end_to_end.py  test_ensemble.py  test_evaluation.py  test_export.py  test_ground_truth.py  test_history_window.py  test_import.py  test_ir_executor.py  test_lookup_table.py  test_observation.py  test_omop_export.py  test_real_import.py  test_submodule.py  test_vitals_mortality.py  test_wellness.py
tests/fixtures/synthea_modules/: NOTICE.txt
