[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psynthea"
version = "0.1.0"
description = "Python-native, Synthea-compatible synthetic patient generator with code-based modules, ground-truth labels, and OMOP CDM output"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Miguel-Angel Sicilia", email = "msicilia@gmail.com" }]
keywords = [
    "synthetic data", "electronic health records", "EHR", "OMOP", "OHDSI",
    "synthea", "simulation", "synthetic patients", "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/msicilia/psynthea"
Documentation = "https://msicilia.github.io/psynthea"
Repository = "https://github.com/msicilia/psynthea"
Issues = "https://github.com/msicilia/psynthea/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.scripts]
psynthea = "psynthea.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/psynthea"]

[tool.hatch.build.targets.sdist]
include = ["src/psynthea", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
